--- a/APSyncFramework/modules/APSync_webserver/templates/index.html
+++ b/APSyncFramework/modules/APSync_webserver/templates/index.html
@@ -1,42 +1,66 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Tornado Chat Demo</title>
-    <link rel="stylesheet" href="{{ static_url("chat.css") }}" type="text/css">
-  </head>
-  <body>
-    <div id="body">
-      <div id="inbox">
-        {% for message in messages %}
-          {% include "message.html" %}
-        {% end %}
-      </div>
-      <hr>
-   <div id="configuration">
-     <ul>
-       {% for config in configs %}
-         <li>{{ escape(config) }} -> {{ escape(configs[config]) }}</li>
-       {% end %}
-     </ul>
-   </div>
-   <hr>
-      <div id="input">
-        <form action="/a/message/new" method="post" id="messageform">
-          <table>
-            <tr>
-              <td><input name="body" id="message" style="width:500px"></td>
-              <td style="padding-left:5px">
-                <input type="submit" value="{{ _("Post") }}">
-                <input type="hidden" name="next" value="{{ request.path }}">
-                {% module xsrf_form_html() %}
-              </td>
-            </tr>
-          </table>
-        </form>
-      </div>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
-    <script src="{{ static_url("chat.js") }}" type="text/javascript"></script>
-  </body>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+    	<title>APSync</title>
+    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    	<script src="{{ static_url("js/jquery-3.1.1.slim.min.js") }}" type="text/javascript"></script>
+    	<script src="{{ static_url("js/tether.min.js") }}" type="text/javascript"></script>
+    	<script src="{{ static_url("js/bootstrap.min.js") }}" type="text/javascript"></script>
+    	<link rel="stylesheet" type="text/css" href="{{static_url("css/bootstrap.min.css")}}">
+    </head>
+	
+  	<body>
+  		<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    			<span class="navbar-toggler-icon"></span>
+  			</button>
+  			<a class="navbar-brand" href="#">APSync</a>
+  			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+    			<ul class="navbar-nav mr-auto">
+    				<!-- Add links here -->
+    			</ul>
+  			</div>
+		</nav>
+		
+  		<br>
+  		
+  		<div class="container">
+  			<div class="alert alert-danger" role="alert">
+      			<p><strong>Important:</strong> Work in progress...</p>
+	  		</div>
+			
+			<br>
+       	
+	       	<div class="panel panel-default text-center" id="configuration">
+		       	<form id=configuration_form>
+		       		{% for config in configs %}
+		     		<div class="form-group row">
+		     			<label for="example-text-input" class="col-5 col-form-label">{{ escape(config) }}</label>
+						<div class="col-5">
+	  						<input class="form-control" type="text" value={{ escape(configs[config]) }} id={{ escape(config) }}>
+						</div>
+		       		</div>
+		       		{% end %}
+		       	</form>
+		       	<button type="button" id="submit_btn" class="btn btn-secondary">Submit</button>
+	       	</div>
+       	</div>
+  	</body>
+  	<script src="{{ static_url("js/websocket.js") }}" type="text/javascript"></script>
+  	<script type="text/javascript">
+  	var tmp = {};
+  	
+  	document.getElementById("submit_btn").onclick = submitConfig;
+  	
+  	function submitConfig(){
+  		config = {};
+  		$("form#configuration_form :input").each(function(){
+  			console.log(this.type, this.id, this.value );
+  			config[this.id] = this.value
+  		});
+  	console.log(JSON.stringify(config))
+  	send(JSON.stringify(config))
+  	};
+  	</script>
 </html>
