--- a/APSyncFramework/modules/APSync_webserver/templates/index.html
+++ b/APSyncFramework/modules/APSync_webserver/templates/index.html
@@ -3,15 +3,12 @@
 	<head>
 		<meta charset="utf-8">
     	<title>APSync</title>
-    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    	<script src="{{ static_url("js/jquery-3.1.1.slim.min.js") }}" type="text/javascript"></script>
-    	<script src="{{ static_url("js/tether.min.js") }}" type="text/javascript"></script>
-    	<script src="{{ static_url("js/bootstrap.min.js") }}" type="text/javascript"></script>
+    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     	<link rel="stylesheet" type="text/css" href="{{static_url("css/bootstrap.min.css")}}">
     </head>
 	
   	<body>
-  		<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  		<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
   			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     			<span class="navbar-toggler-icon"></span>
   			</button>
@@ -26,7 +23,7 @@
   		<br>
   		
   		<div class="container">
-  			<div class="alert alert-danger" role="alert">
+  			<div class="alert alert-danger rounded" role="alert">
       			<p><strong>Important:</strong> Work in progress...</p>
 	  		</div>
 			
@@ -44,23 +41,34 @@
 		       		{% end %}
 		       	</form>
 		       	<button type="button" id="submit_btn" class="btn btn-secondary">Submit</button>
+		       	<button type="button" id="load_btn" class="btn btn-secondary">Load</button>
 	       	</div>
+	       	
+	       	<br>
+	       	<!-- example of sending a MAVLink message from a button -->
+	       	<button type="button" id="mavlink_btn" class="btn btn-secondary">Send MAVLink</button>
+	       	<!-- example of updating text element from javascript (MAVLink data via websocket) -->
+       		<p id="heartbeat_text">Awaiting heartbeat...</p> <!-- this text is updated from datastream.js -->
        	</div>
   	</body>
+  	<script src="{{ static_url("js/datastream.js") }}" type="text/javascript"></script>
   	<script src="{{ static_url("js/websocket.js") }}" type="text/javascript"></script>
-  	<script type="text/javascript">
-  	var tmp = {};
+  	<script src="{{ static_url("js/config.js") }}" type="text/javascript"></script>
+  	<script src="{{ static_url("js/jquery-3.1.1.slim.min.js") }}" type="text/javascript"></script>
+   	<script src="{{ static_url("js/tether.min.js") }}" type="text/javascript"></script>
+   	<script src="{{ static_url("js/bootstrap.min.js") }}" type="text/javascript"></script>
+   	
+   	<script type="text/javascript">
+  	document.getElementById("mavlink_btn").onclick = sendHeartbeat;
   	
-  	document.getElementById("submit_btn").onclick = submitConfig;
-  	
-  	function submitConfig(){
-  		config = {};
-  		$("form#configuration_form :input").each(function(){
-  			console.log(this.type, this.id, this.value );
-  			config[this.id] = this.value
-  		});
-  	console.log(JSON.stringify(config))
-  	send(JSON.stringify(config))
+  	function sendHeartbeat(){
+  		var msg = {};
+  		msg["mavpackettype"] = "HEARTBEAT"
+  		msg["base_mode"] = 0
+  		msg["custom_mode"] = 0
+  		msg["system_status"] = 0
+		console.log(msg)
+  		send(JSON.stringify({"mavlink_data" : msg}))
   	};
-  	</script>
+   	</script>
 </html>
