--- a/APSyncFramework/modules/APSync_webserver/templates/index.html
+++ b/APSyncFramework/modules/APSync_webserver/templates/index.html
@@ -5,6 +5,7 @@
     	<title>APSync</title>
     	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     	<link rel="stylesheet" type="text/css" href="{{static_url("css/bootstrap.min.css")}}">
+    	<link rel="icon" type="img/ico" href="{{static_url("favicon.ico")}}">
     </head>
 	
   	<body>
