--- a/APSyncFramework/modules/APSync_webserver/templates/index.html
+++ b/APSyncFramework/modules/APSync_webserver/templates/index.html
@@ -56,7 +56,7 @@
 	       	
 	       	<button type="button" class="btn btn-secondary" id="create_identity_btn">Create Identity</button>
 	       	<br>&nbsp;
-	       	<div id="identity_string" style="border: 1px solid black; border-radius: 6px; padding: 0.01em 16px; ">Enter text here...</div>
+	       	<div id="identity_string" style="border: 1px solid black; border-radius: 6px; padding: 0.01em 16px; word-break: break-all; word-wrap: break-word;">Enter text here...</div>
 	       	<hr>
 	       	
        	</div>
