--- a/APSyncFramework/modules/APSync_webserver/templates/dfsync.html
+++ b/APSyncFramework/modules/APSync_webserver/templates/dfsync.html
@@ -23,10 +23,17 @@
 		
   		<br>
   		
-  		<div class="container">
-  			<div class="alert alert-danger rounded" role="alert">
-      			<p><strong>Important:</strong> Work in progress...</p>
-	  		</div>
+  		<div class="container">	  		
+	  		<div id="alerts">
+	  		
+	  			<div class="alert alert-danger alert-dismissible fade show" role="alert">
+	  				<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	  				<p><strong>Important:</strong> Work in progress...</p>
+	  			</div>
+	  			
+	  			<!-- Generated content -->
+	  			
+			</div>
 			
 			<br>
        	
@@ -42,9 +49,24 @@
 		       		{% end %}
 		       	</form>
 		       	<button type="button" id="register_btn" class="btn btn-secondary">Register</button>
-	       	</div>       	
+	       	</div>
+	       	
+	       	<br>
+	       	
+	       	<div id="progressHeadder">File:</div>
+	       	<div class="progress">
+				<div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+			</div>
+			<div id="progressFooter"></div>
+			<br>
+			<div id="progressMessages"></div>
+			
+			<br>
+			<br>
+			       	
        	</div>
   	</body>
+  	
   	<script src="{{ static_url("js/datastream.js") }}" type="text/javascript"></script>
   	<script src="{{ static_url("js/websocket.js") }}" type="text/javascript"></script>
   	<script src="{{ static_url("js/dfsync.js") }}" type="text/javascript"></script>
@@ -52,4 +74,35 @@
   	<script src="{{ static_url("js/jquery-3.1.1.slim.min.js") }}" type="text/javascript"></script>
    	<script src="{{ static_url("js/tether.min.js") }}" type="text/javascript"></script>
    	<script src="{{ static_url("js/bootstrap.min.js") }}" type="text/javascript"></script>
+   	
+   	<script type="text/javascript">
+   	
+   	
+  	
+  	<!--  when the server gets back to us, it'll call these functions with the contents of the reply's "json_data" as the paramater -->
+  	function dfsyncSyncRegister(json_data){
+  		$('<div class="alert alert-success alert-dismissible fade show" role="alert">'+'<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>'+json_data.message+'</div>').prependTo("#alerts");
+  		console.log(json_data);
+  	}
+
+  	function dfsyncSyncUpdate(json_data){
+  		if (json_data.status == 'starting') {
+  			progressHeadder.textContent = 'File: '+json_data.file+' - starting';
+  			$('.progress-bar').css('width', json_data.percent_sent+'%').attr('aria-valuenow', json_data.percent_sent);
+  		}
+  		if (json_data.status == 'progress') {
+  			progressHeadder.textContent = 'File: '+json_data.file+' - uploading';
+  			$('.progress-bar').css('width', json_data.percent_sent+'%').attr('aria-valuenow', json_data.percent_sent);
+  			progressFooter.textContent = json_data.data_sent+' '+json_data.percent_sent+'% '+json_data.sending_rate+'\t'+json_data.time_remaining;
+  		}
+  		if (json_data.status == 'complete' || json_data.status == 'error') {
+  			progressHeadder.textContent = 'File: '+json_data.file+' - '+json_data.status;
+  			$('.progress-bar').css('width', 0+'%').attr('aria-valuenow', 0);
+  			progressFooter.textContent = '';
+  			progressMessages.textContent = json_data.current_time+' : '+json_data.message+'\r'+progressMessages.textContent
+  		}
+  	 	console.log(json_data);
+  	}
+    
+   	</script>
 </html>
