--- a/APSyncFramework/modules/APSync_webserver/templates/dfsync.html
+++ b/APSyncFramework/modules/APSync_webserver/templates/dfsync.html
@@ -55,7 +55,7 @@
 	       	
 	       	<div id="progressHeadder">File:</div>
 	       	<div class="progress">
-				<div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+				<div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="rsyncprogressbar"></div>
 			</div>
 			<div id="progressFooter"></div>
 			<br>
@@ -76,9 +76,6 @@
    	<script src="{{ static_url("js/bootstrap.min.js") }}" type="text/javascript"></script>
    	
    	<script type="text/javascript">
-   	
-   	
-  	
   	<!--  when the server gets back to us, it'll call these functions with the contents of the reply's "json_data" as the paramater -->
   	function dfsyncSyncRegister(json_data){
   		$('<div class="alert alert-success alert-dismissible fade show" role="alert">'+'<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>'+json_data.message+'</div>').prependTo("#alerts");
@@ -88,18 +85,44 @@
   	function dfsyncSyncUpdate(json_data){
   		if (json_data.status == 'starting') {
   			progressHeadder.textContent = 'File: '+json_data.file+' - starting';
+  			
+  			var element = document.getElementById("rsyncprogressbar");
+  			element.classList.add("progress-bar-animated");
+  			
   			$('.progress-bar').css('width', json_data.percent_sent+'%').attr('aria-valuenow', json_data.percent_sent);
   		}
   		if (json_data.status == 'progress') {
   			progressHeadder.textContent = 'File: '+json_data.file+' - uploading';
+  			
+  			var element = document.getElementById("rsyncprogressbar");
+  			element.classList.add("progress-bar-animated");
+  			
   			$('.progress-bar').css('width', json_data.percent_sent+'%').attr('aria-valuenow', json_data.percent_sent);
-  			progressFooter.textContent = json_data.data_sent+' '+json_data.percent_sent+'% '+json_data.sending_rate+'\t'+json_data.time_remaining;
+  			progressFooter.textContent = json_data.data_sent+'   '+json_data.percent_sent+'%   '+json_data.sending_rate+'   '+json_data.time_remaining;
   		}
-  		if (json_data.status == 'complete' || json_data.status == 'error') {
+  		if (json_data.status == 'complete') {
   			progressHeadder.textContent = 'File: '+json_data.file+' - '+json_data.status;
+  			
+  			var element = document.getElementById("rsyncprogressbar");
+  			element.classList.remove("progress-bar-animated");
+  			
+  			$('.progress-bar').css('width', 100+'%').attr('aria-valuenow', 100);
+  			progressFooter.textContent = '';
+  			
+  			var tmp = progressMessages.textContent;
+  			progressMessages.textContent = json_data.current_time+' : '+json_data.message+'\r'+tmp
+  		}
+  		if (json_data.status == 'error') {
+  			progressHeadder.textContent = 'File: '+json_data.file+' - '+json_data.status;
+  			
+  			var element = document.getElementById("rsyncprogressbar");
+  			element.classList.remove("progress-bar-animated");
+  			
   			$('.progress-bar').css('width', 0+'%').attr('aria-valuenow', 0);
   			progressFooter.textContent = '';
-  			progressMessages.textContent = json_data.current_time+' : '+json_data.message+'\r'+progressMessages.textContent
+  			
+  			var tmp = progressMessages.textContent;
+  			progressMessages.textContent = json_data.current_time+' : '+json_data.message+'\r'+tmp
   		}
   	 	console.log(json_data);
   	}
